test/simple/ill-typed/tuple_right.caprice
(* TEST
  include refutable;
*)


let x : int * bool = 0, 0
